# FigurePainter

./: CMakeLists.txt  README.md
src/: figureparams.h  figureshistory.cpp  figureshistory.h  figuresmodel.cpp  figuresmodel.h  figuresrenderer.cpp  figuresrenderer.h  figureswidget.cpp  figureswidget.h  main.cpp
